--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,6 +4,8 @@
         <title>
             tea-shop
         </title>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+
     </head>
     <body>
         
