--- a/views/demo.ejs
+++ b/views/demo.ejs
@@ -3,17 +3,19 @@
         <title>
             demonstration
         </title>
-        <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+        <script src="jquery-3.3.1.min.js"></script>
     </head>
     
     <body> 
-    <input list="tees">
+    <input id="name" list="tees">
     <datalist id="tees">
     <% foundItems.forEach(function(item){%>
         <option value="<%= item.name %>">
         
     <% }) %>
     </datalist>
+    <input id="price" type="text">
+    <input type="button" onclick="magicTrick();">
     <script type="text/javascript" src="demo.js"></script>
     </body>
 </html>
