Extracting data based on type:

--- a/views/demo.ejs
+++ b/views/demo.ejs
@@ -14,8 +14,17 @@
         
     <% }) %>
     </datalist>
+    <input id="registerCode" type="text">
     <input id="price" type="text">
     <input type="button" onclick="magicTrick();">
+    
+    <select id="type">
+        <option value="sztuka">sztuka</option>
+        <option value="czajnik">czajnik</option>
+        <option value="gaiwan">gaiwan</option>
+        <option value="opakowanie">opakowanie</option>
+        <option value="gram">gram</option>
+    </select>
     <script type="text/javascript" src="demo.js"></script>
     </body>
 </html>
