Added quantity input and it also calculates price

--- a/views/demo.ejs
+++ b/views/demo.ejs
@@ -16,8 +16,7 @@
     </datalist>
     <input id="registerCode" type="text">
     <input id="price" type="text">
-    <input type="button" onclick="magicTrick();">
-    
+    <input id="quantity" type="number" name="quantity" min="0" value="1">
     <select id="type">
         <option value="sztuka">sztuka</option>
         <option value="czajnik">czajnik</option>
