Created mechanism to name div after id of item it represents

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -30,5 +30,6 @@
         <input class="code">
     
     <script type="text/javascript" src="eventListeners.js"></script>
+    <script type="text/javascript" src="createItemDiv.js"></script>
     </body>
 </html>
