Now UI calculates prices for multiple orederedItems

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,28 +7,29 @@
     </head>
     
     <body> 
-    <div id="666">
-        <input class="name" list="tees">
-      
-        <input class="registerCode" type="text">
-        <input class="price" type="text">
-        <input class="quantity" type="number" name="quantity" min="0" value="1">
-        <select class="type">
-            <option value="sztuka">sztuka</option>
-            <option value="czajnik">czajnik</option>
-            <option value="gaiwan">gaiwan</option>
-            <option value="opakowanie">opakowanie</option>
-            <option value="gram">gram</option>
-        </select>
+    <div id="master">
+        <div id="666">
+            <input class="name" list="tees">
+          
+            <input class="registerCode" type="text">
+            <input class="price" type="text">
+            <input class="quantity" type="number" name="quantity" min="0" value="1">
+            <select class="type">
+                <option value="sztuka">sztuka</option>
+                <option value="czajnik">czajnik</option>
+                <option value="gaiwan">gaiwan</option>
+                <option value="opakowanie">opakowanie</option>
+                <option value="gram">gram</option>
+            </select>
+        </div>
+        
+        <datalist id="tees">
+            <% foundItems.forEach(function(item){%>
+                <option value="<%= item.name %>">
+                
+            <% }) %>
+        </datalist>
     </div>
-    
-    <datalist id="tees">
-        <% foundItems.forEach(function(item){%>
-            <option value="<%= item.name %>">
-            
-        <% }) %>
-    </datalist>
-
     <script type="text/javascript" src="createItemDiv.js"></script>
     <script type="text/javascript" src="eventListeners.js"></script>
 
