App now creates order divs with items in them

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,7 +16,8 @@
             <% }) %>
         </datalist>
     </div>
-    <script type="text/javascript" src="createItemDiv.js"></script>
+    <script type="text/javascript" src="createItem.js"></script>
+    <script type="text/javascript" src="createOrder.js"></script>
     <script type="text/javascript" src="eventListeners.js"></script>
     <script type="text/javascript" src="updateOrderedItemsDB.js"></script>
 
