Created header file for navigation menu

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,6 +20,7 @@
     <script type="text/javascript" src="createOrder.js"></script>
     <script type="text/javascript" src="eventListeners.js"></script>
     <script type="text/javascript" src="updateOrderedItemsDB.js"></script>
+    <script type="text/javascript" src="header.js"></script>
 
     </body>
 </html>
