Sending order updated data to backend

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,6 +21,7 @@
     <script type="text/javascript" src="eventListeners.js"></script>
     <script type="text/javascript" src="updateOrderedItemsDB.js"></script>
     <script type="text/javascript" src="header.js"></script>
+    <script type="text/javascript" src="updateOrder.js"></script>
 
     </body>
 </html>
