Started refactoring updating db, created script to send new table coordinates to db

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,6 +20,7 @@
     <script type="text/javascript" src="header.js"></script>
     <script type="text/javascript" src="orderedItem.js"></script>
     <script type="text/javascript" src="order.js"></script>
+    <script type="text/javascript" src="ajax.js"></script>
 
     </body>
 </html>
