--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,6 +21,7 @@
     <script type="text/javascript" src="orderedItem.js"></script>
     <script type="text/javascript" src="order.js"></script>
     <script type="text/javascript" src="ajax.js"></script>
+    <script type="text/javascript" src="menu.js"></script>
 
     </body>
 </html>
