Set up archive route

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,6 +22,7 @@
     <script type="text/javascript" src="order.js"></script>
     <script type="text/javascript" src="ajax.js"></script>
     <script type="text/javascript" src="menu.js"></script>
+    <script type="text/javascript" src="archive.js"></script>
 
     </body>
 </html>
