Added container for record view, put order creation button in there

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,7 @@
     </head>
     
     <body> 
-    <div id="master">
+    <div id="record-view">
         
         <datalist id="tees">
             <% foundItems.forEach(function(item){%>
