--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,6 +4,7 @@
             demonstration
         </title>
         <script src="jquery-3.3.1.min.js"></script>
+        <link rel="stylesheet" href="styles.css">
     </head>
     
     <body> 
