--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,6 +5,8 @@
         </title>
         <script src="jquery-3.3.1.min.js"></script>
         <link rel="stylesheet" href="styles.css">
+        <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,700" rel="stylesheet">    
+        
     </head>
     
     <body> 
