--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,8 @@
             demonstration
         </title>
         <script src="jquery-3.3.1.min.js"></script>
-        <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="record.css">
+        <link rel="stylesheet" href="menu.css">
         <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,700" rel="stylesheet">    
         
     </head>
