--- a/public/record.css
+++ b/public/record.css
@@ -34,6 +34,7 @@ button, input, select {
 }
 .bottom-panel {
     display: flex;
+    order: 4;
 }
 
 
@@ -43,6 +44,9 @@ button, input, select {
 
 .order {
     margin: 1% 0% 1% 0%;
+    display: flex;
+    flex-direction: column;
+
 }
 
 .registerCode{
