--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,9 @@
         <link rel="stylesheet" href="menu.css">
         <link rel="stylesheet" href="archive.css">
         <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,700" rel="stylesheet">    
-        
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+
+
     </head>
     
     <body> 
