--- a/public/record.css
+++ b/public/record.css
@@ -35,6 +35,7 @@ button, input, select {
 .discount-label, .sum-label {
     margin-left: auto;
 }
+
 .bottom-panel {
     display: flex;
     order: 4;
@@ -49,7 +50,6 @@ button, input, select {
     margin: 1% 0% 1% 0%;
     display: flex;
     flex-direction: column;
-
 }
 
 .registerCode{
@@ -129,4 +129,19 @@ button {
 }
 .collapse-order {
     width: 11em;
+    
+}
+
+.cosmic-fusion-up {
+    background: #ff00cc;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to bottom, #333399, #ff00cc);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to bottom, #333399, #ff00cc); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    
+}
+
+.cosmic-fusion-down {
+    background: #ff00cc;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to top, #333399, #ff00cc);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to top, #333399, #ff00cc); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
 }
