Opening new tab hides all main-containers, closing it shows them

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,7 +14,7 @@
     </head>
     
     <body> 
-    <div id="record-view">
+    <div id="record-view" class='main-container'>
         
         <datalist id="tees">
             <% foundItems.forEach(function(item){%>
