Created universal for collections promises and refactored delete order to use it

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -28,6 +28,10 @@
     <script type="text/javascript" src="ajax.js"></script>
     <script type="text/javascript" src="menu.js"></script>
     <script type="text/javascript" src="archive.js"></script>
+    <script type="text/javascript" src="orderDelete.js"></script>
+    <script type="text/javascript" src="orderCreate.js"></script>
+    <script type="text/javascript" src="orderUpdate.js"></script>
+    <script type="text/javascript" src="orderRead.js"></script>
 
     </body>
 </html>
