Figuring out flash messages

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
     <head>
         <title>
@@ -6,12 +7,18 @@
         <script src="jquery-3.3.1.min.js"></script>
         <link rel="stylesheet" href="styles.css">
         <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,700" rel="stylesheet">    
+
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
-
-
     </head>
-    
     <body> 
+    <div>
+        <% if(error && error.length > 0){ %>
+            <div class="alert alert-danger" role="alert"><%= error %></div>
+        <% } %>
+        <% if(success && success.length > 0){ %>
+            <div class="alert alert-success" role="alert"><%= success %></div>
+        <% } %>
+    </div>
     <div id="record-view" class='main-container'>
         
         <datalist id="tees">
@@ -21,6 +28,7 @@
             <% }) %>
         </datalist>
     </div>
+    
     <script type="text/javascript" src="eventListeners.js"></script>
     <script type="text/javascript" src="header.js"></script>
     <script type="text/javascript" src="orderedItem.js"></script>
