Chaning orderedItems to items; changed model, frontend script and routes

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -24,7 +24,7 @@
     
     <script type="text/javascript" src="eventListeners.js"></script>
     <script type="text/javascript" src="header.js"></script>
-    <script type="text/javascript" src="orderedItem.js"></script>
+    <script type="text/javascript" src="item.js"></script>
     <script type="text/javascript" src="order.js"></script>
     <script type="text/javascript" src="ajax.js"></script>
     <script type="text/javascript" src="menu.js"></script>
