--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>
-            demonstration
+            Ewidencja
         </title>
         <script src="jquery-3.3.1.min.js"></script>
         <link rel="stylesheet" href="styles.css">
