Extracted getting date in archive to function, fixed empty orders not being deleted

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -33,6 +33,7 @@
     <script type="text/javascript" src="orderCreate.js"></script>
     <script type="text/javascript" src="orderUpdate.js"></script>
     <script type="text/javascript" src="orderRead.js"></script>
+    <script type="text/javascript" src="littleFunctions.js"></script>
 
     </body>
 </html>
