Extracted logic from menu.js

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -34,6 +34,7 @@
     <script type="text/javascript" src="orderUpdate.js"></script>
     <script type="text/javascript" src="orderRead.js"></script>
     <script type="text/javascript" src="littleFunctions.js"></script>
+    <script type="text/javascript" src="menuHTML.js"></script>
 
     </body>
 </html>
