--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,6 @@
         <script src="jquery-3.3.1.min.js"></script>
         <link rel="stylesheet" href="styles.css">
         <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,700" rel="stylesheet">    
-
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     </head>
     <body> 
@@ -15,10 +14,9 @@
     <div id="record-view" class='main-container'>
         
         <datalist id="tees">
-            <% foundItems.forEach(function(item){%>
+            <% foundItems.forEach((item) => {%>
                 <option value="<%= item.name %>">
-                
-            <% }) %>
+            <% }); %>
         </datalist>
     </div>
     
@@ -33,8 +31,6 @@
     <script type="text/javascript" src="orderCreate.js"></script>
     <script type="text/javascript" src="orderUpdate.js"></script>
     <script type="text/javascript" src="orderRead.js"></script>
-    <script type="text/javascript" src="littleFunctions.js"></script>
-    <script type="text/javascript" src="menuHTML.js"></script>
 
     </body>
 </html>
