Now clicking table input when order is collapsed will open it

--- a/public/styles.css
+++ b/public/styles.css
@@ -63,7 +63,7 @@ button, input, select {
 .register-code{
     width: 2em;
     text-align: center;
-    background-color: #f2e3ae;
+    background-color: #fb8eff ;
 }
 
 .sum, .discounted-sum, .price, .discounted-price {
