--- a/public/styles.css
+++ b/public/styles.css
@@ -89,8 +89,14 @@ button, input, select {
     text-align: right;
 }
 
-#create-order, .add-item-button {
+.add-item-button {
     background: #00416A;  
+}
+
+#create-order{ 
+    background: #00416A;
+    height: 3em;
+    width: 12%;
 }
 
 .delete-button {
@@ -270,4 +276,13 @@ input, select{
 #menu-container {
     display: flex;
     flex-direction: column;
+}
+
+#top-panel {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 999;
+    width: 100%;
+    height: 23px;
 }
