--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,13 +20,17 @@
         </datalist>
     </div>
     
-    <script type="text/javascript" src="eventListeners.js"></script>
-    <script type="text/javascript" src="header.js"></script>
-    <script type="text/javascript" src="item.js"></script>
-    <script type="text/javascript" src="order.js"></script>
     <script type="text/javascript" src="ajax.js"></script>
+    <script type="text/javascript" src="eventListeners.js"></script>
+    
+    <script type="text/javascript" src="header.js"></script>
     <script type="text/javascript" src="menu.js"></script>
     <script type="text/javascript" src="archive.js"></script>
+    <script type="text/javascript" src="evidence.js"></script>
+    
+    <script type="text/javascript" src="item.js"></script>
+    <script type="text/javascript" src="order.js"></script>
+    
     <script type="text/javascript" src="orderDelete.js"></script>
     <script type="text/javascript" src="orderCreate.js"></script>
     <script type="text/javascript" src="orderUpdate.js"></script>
