--- a/public/styles.css
+++ b/public/styles.css
@@ -300,3 +300,13 @@ input, select{
 .top-panel .button{
     height: 2em;
 }
+
+#version {
+    position: fixed;
+    top: 0;
+    z-index: 999;
+    width: 100%;
+    height: 1em;
+    color: red;
+    text-align: right;
+}
