--- a/public/styles.css
+++ b/public/styles.css
@@ -101,9 +101,10 @@ button, input, select {
 }
 
 .delete-button {
-    background: #d6634f;
+    background: silver;
     padding: 1px 8px;
     margin-right: auto;
+    color: black;
 }
 
 .send-button {
