--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,6 +27,7 @@
     <script type="text/javascript" src="menu.js"></script>
     <script type="text/javascript" src="archive.js"></script>
     <script type="text/javascript" src="evidence.js"></script>
+    <script type="text/javascript" src="tasks.js"></script>
     
     <script type="text/javascript" src="item.js"></script>
     <script type="text/javascript" src="order.js"></script>
