Added button to come back from summary view, added some styles to buttons

--- a/public/styles.css
+++ b/public/styles.css
@@ -248,4 +248,12 @@ input, select {
     flex-direction: column-reverse;
 }
 
+
+#summary-panel {
+  display: flex;
+}
+
+#buttons{
+  display: flex;
+}
 /*# sourceMappingURL=styles.css.map */
