--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <script src="jquery-3.3.1.min.js"></script>
+        <script type="text/javascript" src="localization.js"></script>
+
         <title>
             Ewidencja
         </title>
-        <script src="jquery-3.3.1.min.js"></script>
+        
         <link rel="stylesheet" href="styles.css">
         <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,700" rel="stylesheet">    
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+
     </head>
     <body> 
 
