User is able to change language, page then refreshes with new language, cannot choose english

--- a/public/styles.css
+++ b/public/styles.css
@@ -229,7 +229,7 @@ input, select {
 .top-panel .button {
   height: 2em; }
 
-#version {
+#version{
   position: fixed;
   top: 0;
   z-index: 999;
@@ -238,6 +238,17 @@ input, select {
   color: red;
   text-align: right; }
 
+#language{
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  z-index: 999;
+  width: 5em;
+  color: black;
+  background: gray;
+
+}
+  
 .item-labels-container {
   display: flex; 
   
